k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      hostNetwork: true
      imagePullSecrets:
        - name: gitlab-registry-secret
      containers:
        - name: api
          image: "registry.gitlab.com/seang38077-group/leetcoderating/leetcoderating-worker:latest"
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: worker
spec:
  selector:
    app: worker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
